# linux--ethereum

./: PBFT.pptx  README.md  block_sync.pptx  ethereum-transaction-brief-introduction.pptx  ethereum.txt  ethereum_block.txt  levedb架构图.vsdx  solidity_study.pptx  srcethereum.txt  以太坊.vsdx  比特币源码分析.docx
cpp-ethereum/: CMakeLists.txt  README.md  config.json
cpp-ethereum/cmake/: EthCompilerSettings.cmake
cpp-ethereum/doc/: cpp代码记录.docx  ethereum.mmap  区块链记录.docx
cpp-ethereum/eth/: CMakeLists.txt
cpp-ethereum/ethvm/: CMakeLists.txt
cpp-ethereum/libcontract/: CMakeLists.txt  solidity.cpp  solidity.h
cpp-ethereum/libcontract/solidity/libdevcore/: CommonData.h  CommonIO.h  SHA3.cpp
cpp-ethereum/libdevcore/: Log.cpp  Log.h
cpp-ethereum/libethereum/: Account.cpp  Block.cpp  Block.h  Client.cpp  Client.h  ClientBase.cpp  ClientTest.h  Executive.cpp
cpp-ethereum/libweb3jsonrpc/: Eth.cpp
dapps/contracts/: Area.sol
dapps/migrations/: 2_deploy_contracts.js
etherwallet/chrome-extension/: index.html
go-ethereum/: my-genesis.json
go-ethereum/core/: state_transition.go
go-ethereum/params/: protocol_params.go
